Bug #39946 Should display shift trade schedule with one of schedule day is empty

--- a/Teleopti.Ccc.Web/Teleopti.Ccc.Web/WFM/css/_requests.scss
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.Web/WFM/css/_requests.scss
@@ -401,6 +401,7 @@
             margin-top: 5px;
             margin-bottom: 5px;
             width: 30px;
+            min-height:22px;
         }
 
         .ui-grid-pinned-container-left .ui-grid-top-panel,
